# wizdraw

./: .gitignore  Cargo.toml  README.md  bezier-stats.py  index.html
examples/: png_demo.rs
misc/: bouncy.html  index.html  index2.html
src/: lib.rs  seq.rs  sequential.rs  simd.rs  util.rs
src/cpu/: mod.rs  simd.rs  texture.rs  worker.rs
src/opengl/glsl/: f-es3.glsl
wizdraw/: Cargo.toml  README.md
wizdraw-demo-web/: Cargo.toml  build.sh  index.html  lib.rs
wizdraw/examples/: _benchmark.rs  cpu.rs  egl-gles2.rs  opengl.rs  png_demo.rs
wizdraw/src/: contour.rs  lib.rs  shapes.rs
wizdraw/src/cpu/: bitmap.rs  mod.rs  seq.rs  simd.rs  texture.rs  tile.rs  worker.rs
wizdraw/src/gles2/: color-fragment-shader.glsl  mask-fragment-shader.glsl  mask-vertex-shader.glsl  mod.rs
wizdraw/src/opengl/: color-fragment-shader.glsl  drm_kms.rs  mod.rs
wizdraw/src/opengl/glsl/: f-es2.glsl  v-es2.glsl  v-es3.glsl
