[package]
name = "wizdraw"
version = "2.0.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Tiny no_std crate to fill and stroke composite bezier curves (SIMD/SSAA)"
license = "MIT"
keywords = [ "vector-graphics", "render", "svg", "no_std", "simd" ]
repository = "https://github.com/NathanRoyer/wizdraw"
categories = [ "rendering", "no-std" ]

[dependencies]
vek = { version = "0.16", default-features = false, features = ["libm"] }
rgb = { version = "0.8" }

# optional:
drm = { version = "0.11", optional = true }
gbm = { version = "0.14", optional = true, default-features = false, features = [ "import-egl", "drm-support" ] }
khronos-egl = { version = "6.0", optional = true, features = [ "static" ] }
glow = { version = "0.13", optional = true }

[features]
default = [ "stroke" ]
stroke = []
simd = []
std = []
drmkms = [ "drm", "gbm", "khronos-egl", "glow", "std" ]

[dev-dependencies]
png = "0.17"

[profile.release]
debug = true
