[package]
name = "wizdraw-demo-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2"
wizdraw = { path = "../wizdraw" }
png = "0.17"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'Node',
    'Window',
]